Fix some more bad code style issues